// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ContactUs Desktop View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-gsfzvr-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <icon-mock
        className="css-1i54vah-bgPatternStyle-bgPatternStyle-bgPatternStyle"
      />
      <div
        className="css-jbb6ht-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-ContactUs-ContactUs"
      >
        <h3>
          Ready to get started?
        </h3>
        <button
          className="css-187vqqa-StyledButton-Button e13mtfop0"
        >
          contact us
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContactUs Mobile View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-gsfzvr-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <icon-mock
        className="css-1i54vah-bgPatternStyle-bgPatternStyle-bgPatternStyle"
      />
      <div
        className="css-jbb6ht-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-ContactUs-ContactUs"
      >
        <h3>
          Ready to get started?
        </h3>
        <button
          className="css-187vqqa-StyledButton-Button e13mtfop0"
        >
          contact us
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContactUs Tablet View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-gsfzvr-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <icon-mock
        className="css-1i54vah-bgPatternStyle-bgPatternStyle-bgPatternStyle"
      />
      <div
        className="css-jbb6ht-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-ContactUs-ContactUs"
      >
        <h3>
          Ready to get started?
        </h3>
        <button
          className="css-187vqqa-StyledButton-Button e13mtfop0"
        >
          contact us
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer Desktop View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <footer
      className="css-19kj1rl-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <div
        className="css-1fvpi1q-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-contentDivStyles-contentDivStyles-contentDivStyles-contentDivStyles-contentDivStyles-Footer"
      >
        <div>
          <icon-mock
            className="css-1jtudta-logoStyles-logoStyles-logoStyles"
          />
          <div>
            <ul>
              <li>
                home
              </li>
              <li>
                about
              </li>
            </ul>
          </div>
        </div>
        <div>
          <address>
            987 Hillcrest Lane
            <br />
            Irvine, CA
            <br />
            California 92714
            <br />
            Call Us : 949-833-7432
          </address>
        </div>
        <div
          className="css-asl8w7-columnThreeStyles-columnThreeStyles-columnThreeStyles-columnThreeStyles"
        >
          <div
            className="css-ujjran-socialIconsStyles"
          >
            <icon-mock />
            <icon-mock />
            <icon-mock />
          </div>
          <small>
            Copyright 2020. All Rights Reserved
          </small>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Footer Mobile View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <footer
      className="css-19kj1rl-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <div
        className="css-1fvpi1q-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-contentDivStyles-contentDivStyles-contentDivStyles-contentDivStyles-contentDivStyles-Footer"
      >
        <div>
          <icon-mock
            className="css-1jtudta-logoStyles-logoStyles-logoStyles"
          />
          <div>
            <ul>
              <li>
                home
              </li>
              <li>
                about
              </li>
            </ul>
          </div>
        </div>
        <div>
          <address>
            987 Hillcrest Lane
            <br />
            Irvine, CA
            <br />
            California 92714
            <br />
            Call Us : 949-833-7432
          </address>
        </div>
        <div
          className="css-asl8w7-columnThreeStyles-columnThreeStyles-columnThreeStyles-columnThreeStyles"
        >
          <div
            className="css-ujjran-socialIconsStyles"
          >
            <icon-mock />
            <icon-mock />
            <icon-mock />
          </div>
          <small>
            Copyright 2020. All Rights Reserved
          </small>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Footer Tablet View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <footer
      className="css-19kj1rl-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <div
        className="css-1fvpi1q-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-contentDivStyles-contentDivStyles-contentDivStyles-contentDivStyles-contentDivStyles-Footer"
      >
        <div>
          <icon-mock
            className="css-1jtudta-logoStyles-logoStyles-logoStyles"
          />
          <div>
            <ul>
              <li>
                home
              </li>
              <li>
                about
              </li>
            </ul>
          </div>
        </div>
        <div>
          <address>
            987 Hillcrest Lane
            <br />
            Irvine, CA
            <br />
            California 92714
            <br />
            Call Us : 949-833-7432
          </address>
        </div>
        <div
          className="css-asl8w7-columnThreeStyles-columnThreeStyles-columnThreeStyles-columnThreeStyles"
        >
          <div
            className="css-ujjran-socialIconsStyles"
          >
            <icon-mock />
            <icon-mock />
            <icon-mock />
          </div>
          <small>
            Copyright 2020. All Rights Reserved
          </small>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Header Desktop View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <header
    className="css-gac5b6-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles"
  >
    <div
      className="css-1envyvl-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-Header"
    >
      <icon-mock
        className="css-1duziw9-logoStyles-logoStyles-logoStyles"
      />
      <div
        className="css-nuxs3x-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
      >
        <div>
          <nav>
            <ul>
              <li>
                home
              </li>
              <li>
                about
              </li>
            </ul>
          </nav>
          <button
            className="css-1buhblq-StyledButton-Button e13mtfop0"
          >
            contact us
          </button>
        </div>
        <icon-mock
          className="css-wxyi1p-hamburgerStyles-hamburgerStyles-hamburgerStyles"
          onClick={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Header Mobile Nav Open View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <header
    className="css-gac5b6-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles"
  >
    <div
      className="css-1envyvl-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-Header"
    >
      <icon-mock
        className="css-1duziw9-logoStyles-logoStyles-logoStyles"
      />
      <div
        className="css-1d6a6g4-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
      >
        <div>
          <nav>
            <ul>
              <li>
                home
              </li>
              <li>
                about
              </li>
            </ul>
          </nav>
          <button
            className="css-1buhblq-StyledButton-Button e13mtfop0"
          >
            contact us
          </button>
          <icon-mock
            className="css-1w9vbxc-navBgPatternStyles"
          />
        </div>
        <icon-mock
          className="css-1bn0731-closeIconStyles-closeIconStyles"
          onClick={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Header Mobile View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <header
    className="css-gac5b6-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles"
  >
    <div
      className="css-1envyvl-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-Header"
    >
      <icon-mock
        className="css-1duziw9-logoStyles-logoStyles-logoStyles"
      />
      <div
        className="css-nuxs3x-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
      >
        <div>
          <nav>
            <ul>
              <li>
                home
              </li>
              <li>
                about
              </li>
            </ul>
          </nav>
          <button
            className="css-1buhblq-StyledButton-Button e13mtfop0"
          >
            contact us
          </button>
        </div>
        <icon-mock
          className="css-wxyi1p-hamburgerStyles-hamburgerStyles-hamburgerStyles"
          onClick={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Header Tablet View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <header
    className="css-gac5b6-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles"
  >
    <div
      className="css-1envyvl-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-overrideContentStyles-Header"
    >
      <icon-mock
        className="css-1duziw9-logoStyles-logoStyles-logoStyles"
      />
      <div
        className="css-nuxs3x-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
      >
        <div>
          <nav>
            <ul>
              <li>
                home
              </li>
              <li>
                about
              </li>
            </ul>
          </nav>
          <button
            className="css-1buhblq-StyledButton-Button e13mtfop0"
          >
            contact us
          </button>
        </div>
        <icon-mock
          className="css-wxyi1p-hamburgerStyles-hamburgerStyles-hamburgerStyles"
          onClick={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots HeroContent Desktop View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-7lxqn8-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles"
    >
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <h1>
          Find the 
          <br />
          best 
          <span>
            talent
          </span>
        </h1>
        <p>
          Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.
        </p>
      </div>
      <icon-mock
        className="css-1ksr0en-bgPatternOneStyle-bgPatternOneStyle-bgPatternOneStyle"
      />
      <icon-mock
        className="css-em6cp3-bgPatternTwoStyle-bgPatternTwoStyle-bgPatternTwoStyle"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots HeroContent Mobile View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-7lxqn8-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles"
    >
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <h1>
          Find the 
          <br />
          best 
          <span>
            talent
          </span>
        </h1>
        <p>
          Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.
        </p>
      </div>
      <icon-mock
        className="css-1ksr0en-bgPatternOneStyle-bgPatternOneStyle-bgPatternOneStyle"
      />
      <icon-mock
        className="css-em6cp3-bgPatternTwoStyle-bgPatternTwoStyle-bgPatternTwoStyle"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots HeroContent Tablet View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-7lxqn8-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles"
    >
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <h1>
          Find the 
          <br />
          best 
          <span>
            talent
          </span>
        </h1>
        <p>
          Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.
        </p>
      </div>
      <icon-mock
        className="css-1ksr0en-bgPatternOneStyle-bgPatternOneStyle-bgPatternOneStyle"
      />
      <icon-mock
        className="css-em6cp3-bgPatternTwoStyle-bgPatternTwoStyle-bgPatternTwoStyle"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Team Desktop View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-1r71bfn-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <hr />
        <h2>
          Build & manage distributed teams like no one else.
        </h2>
        <div
          className="css-uoqqzg-tabletStyles-tabletStyles-tabletStyles"
        >
          <div>
            <icon-mock />
            <div>
              <h4>
                Experienced Individuals
              </h4>
              <p>
                Our network is made up of highly experienced professionals who are passionate about what they do.
              </p>
            </div>
          </div>
          <div>
            <icon-mock />
            <div>
              <h4>
                Easy to Implement
              </h4>
              <p>
                Our processes have been refined over years of implementation meaning our teams always deliver.
              </p>
            </div>
          </div>
          <div>
            <icon-mock />
            <div>
              <h4>
                Enhanced Productivity
              </h4>
              <p>
                Our customized platform with in-built analytics helps you manage your distributed teams.
              </p>
            </div>
          </div>
        </div>
      </div>
      <icon-mock
        className="css-1jlej69-bgPatternStyles-bgPatternStyles-bgPatternStyles"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Team Mobile View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-1r71bfn-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <hr />
        <h2>
          Build & manage distributed teams like no one else.
        </h2>
        <div
          className="css-uoqqzg-tabletStyles-tabletStyles-tabletStyles"
        >
          <div>
            <icon-mock />
            <div>
              <h4>
                Experienced Individuals
              </h4>
              <p>
                Our network is made up of highly experienced professionals who are passionate about what they do.
              </p>
            </div>
          </div>
          <div>
            <icon-mock />
            <div>
              <h4>
                Easy to Implement
              </h4>
              <p>
                Our processes have been refined over years of implementation meaning our teams always deliver.
              </p>
            </div>
          </div>
          <div>
            <icon-mock />
            <div>
              <h4>
                Enhanced Productivity
              </h4>
              <p>
                Our customized platform with in-built analytics helps you manage your distributed teams.
              </p>
            </div>
          </div>
        </div>
      </div>
      <icon-mock
        className="css-1jlej69-bgPatternStyles-bgPatternStyles-bgPatternStyles"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Team Tablet View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-1r71bfn-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <hr />
        <h2>
          Build & manage distributed teams like no one else.
        </h2>
        <div
          className="css-uoqqzg-tabletStyles-tabletStyles-tabletStyles"
        >
          <div>
            <icon-mock />
            <div>
              <h4>
                Experienced Individuals
              </h4>
              <p>
                Our network is made up of highly experienced professionals who are passionate about what they do.
              </p>
            </div>
          </div>
          <div>
            <icon-mock />
            <div>
              <h4>
                Easy to Implement
              </h4>
              <p>
                Our processes have been refined over years of implementation meaning our teams always deliver.
              </p>
            </div>
          </div>
          <div>
            <icon-mock />
            <div>
              <h4>
                Enhanced Productivity
              </h4>
              <p>
                Our customized platform with in-built analytics helps you manage your distributed teams.
              </p>
            </div>
          </div>
        </div>
      </div>
      <icon-mock
        className="css-1jlej69-bgPatternStyles-bgPatternStyles-bgPatternStyles"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Testimonial Desktop View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-yvi17s-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <icon-mock
        className="css-t8ok32-bgPatternOneStyles"
      />
      <icon-mock
        className="css-l8zhoq-bgPatternTwoStyles"
      />
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <h2>
          Delivering real results for top companies. Some of our
           
          <br
            className="css-1lo1k2t-brStyles-brStyles-brStyles-brStyles"
          />
          <span>
            success stories.
          </span>
        </h2>
        <div>
          <section>
            <hgroup>
              <h3>
                Kady Baker
              </h3>
              <h4>
                Product Manager at Bookmark
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”
            </p>
            <img
              alt="Kady Baker"
              src="test-file-stub"
            />
          </section>
          <section>
            <hgroup>
              <h3>
                Aiysha Reese
              </h3>
              <h4>
                Founder of Manage
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”
            </p>
            <img
              alt="Aiysha Reese"
              src="test-file-stub"
            />
          </section>
          <section>
            <hgroup>
              <h3>
                Arthur Clarke
              </h3>
              <h4>
                Co-founder of MyPhysio
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”
            </p>
            <img
              alt="Arthur Clarke"
              src="test-file-stub"
            />
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Testimonial Mobile View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-yvi17s-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <icon-mock
        className="css-t8ok32-bgPatternOneStyles"
      />
      <icon-mock
        className="css-l8zhoq-bgPatternTwoStyles"
      />
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <h2>
          Delivering real results for top companies. Some of our
           
          <br
            className="css-1lo1k2t-brStyles-brStyles-brStyles-brStyles"
          />
          <span>
            success stories.
          </span>
        </h2>
        <div>
          <section>
            <hgroup>
              <h3>
                Kady Baker
              </h3>
              <h4>
                Product Manager at Bookmark
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”
            </p>
            <img
              alt="Kady Baker"
              src="test-file-stub"
            />
          </section>
          <section>
            <hgroup>
              <h3>
                Aiysha Reese
              </h3>
              <h4>
                Founder of Manage
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”
            </p>
            <img
              alt="Aiysha Reese"
              src="test-file-stub"
            />
          </section>
          <section>
            <hgroup>
              <h3>
                Arthur Clarke
              </h3>
              <h4>
                Co-founder of MyPhysio
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”
            </p>
            <img
              alt="Arthur Clarke"
              src="test-file-stub"
            />
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Testimonial Tablet View 1`] = `
<div
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div>
    <div
      className="css-yvi17s-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-componentContainerStyles-tabletStyles-tabletStyles-tabletStyles-desktopStyles-desktopStyles-desktopStyles"
    >
      <icon-mock
        className="css-t8ok32-bgPatternOneStyles"
      />
      <icon-mock
        className="css-l8zhoq-bgPatternTwoStyles"
      />
      <div
        className="css-gcchmi-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles-componentContentStyles"
      >
        <h2>
          Delivering real results for top companies. Some of our
           
          <br
            className="css-1lo1k2t-brStyles-brStyles-brStyles-brStyles"
          />
          <span>
            success stories.
          </span>
        </h2>
        <div>
          <section>
            <hgroup>
              <h3>
                Kady Baker
              </h3>
              <h4>
                Product Manager at Bookmark
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”
            </p>
            <img
              alt="Kady Baker"
              src="test-file-stub"
            />
          </section>
          <section>
            <hgroup>
              <h3>
                Aiysha Reese
              </h3>
              <h4>
                Founder of Manage
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”
            </p>
            <img
              alt="Aiysha Reese"
              src="test-file-stub"
            />
          </section>
          <section>
            <hgroup>
              <h3>
                Arthur Clarke
              </h3>
              <h4>
                Co-founder of MyPhysio
              </h4>
            </hgroup>
            <p>
              <icon-mock />
              “Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”
            </p>
            <img
              alt="Arthur Clarke"
              src="test-file-stub"
            />
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;
